# detectUav

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  README.md  baseTrack_trt.cpp
cmake/: toolchain-aarch64-ascend.cmake
common/include/: AclLiteApp.h  AclLiteImageProc.h  AclLiteModel.h  AclLiteResource.h  AclLiteThread.h  AclLiteThreadMgr.h  AclLiteType.h  AclLiteUtils.h  AclLiteVideoCapBase.h  AclLiteVideoProc.h  CameraCapture.h  CropAndPasteHelper.h  JpegDHelper.h  JpegEHelper.h  PngDHelper.h  ResizeHelper.h  ThreadSafeQueue.h  VdecHelper.h  VencCallback.h  VencHelper.h  VideoCapture.h  VideoWriter.h  drawing.h  freetype_helper.h
common/src/: AclLiteApp.cpp  AclLiteImageProc.cpp  AclLiteModel.cpp  AclLiteResource.cpp  AclLiteThread.cpp  AclLiteThreadMgr.cpp  AclLiteUtils.cpp  AclLiteVideoProc.cpp  CameraCapture.cpp  CropAndPasteHelper.cpp  JpegDHelper.cpp  JpegEHelper.cpp  PngDHelper.cpp  ResizeHelper.cpp  VdecHelper.cpp  VencHelper.cpp  VideoCapture.cpp  VideoWriter.cpp  drawing.cpp  freetype_helper.cpp
data/test_inputs/: online_template_input.npy  search_input.npy  template_input.npy
docs/: detect_pipeline_flow.md
inc/: Params.h  label.h
model/: aipp_nv12.cfg
scripts/: atc.sh  atc_mixformer.sh  atc_nanotrack.sh  config.json  hdim.json  hdmi_output.json  hk_rtsp.json  mp4_to_264.sh  run_gdbserve.sh  sync.sh  sync_sysroot.sh  test.json
src/: CMakeLists.txt  main.cpp  test_hdmi_output.cpp  test_mixformerv2_om.cpp
src/dataInput/: dataInput.cpp  dataInput.h
src/dataOutput/: dataOutput.cpp  dataOutput.h
src/detectInference/: detectInference.cpp  detectInference.h
src/detectPostprocess/: detectPostprocess.cpp  detectPostprocess.h
src/detectPreprocess/: detectPreprocess.cpp  detectPreprocess.h
src/hdmiOutput/: hdmiOutputThread.cpp  hdmiOutputThread.h
src/mixformerv2_om/: README.md  mixformerv2_om.cpp  mixformerv2_om.h
src/pushrtsp/: Live555Streamer.cpp  Live555Streamer.h  common.h  pictortsp.cpp  pictortsp.h  pushrtspthread.cpp  pushrtspthread.h
src/tracking/: tracking.cpp  tracking.h
